# hmmmmm

./: ANDROID_PORT.md  CMakeLists.txt  README.md  build.bat  convert_ico.ps1  gradle.properties  resources.rc  settings.gradle  vcpkg.json
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/teamvanilla/mwtools/: NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
data/schema/: layouts.json  mwmod.schema.json  vault_class_names.json
gradle/wrapper/: gradle-wrapler.properties
include/: Common.h
include/async/: TaskQueue.h
include/core/: BINFile.h  ChunkReader.h  DdsWriter.h  FlagReference.h  KnownNames.h  LZCDecompressor.h  Logger.h  MiniaudioDevice.h  ObjectClassifier.h  StringHash.h  StringUtil.h  VaultSchema.h
include/editor/: Exporter.h  MeshImporter.h
include/formats/: ABKFile.h  AnimationBank.h  AudioBank.h  AudioCodecs.h  CarInfo.h  CarSlot.h  EmitterCatalog.h  FontSheet.h  GINFile.h  HUDLayout.h  MPFFile.h  MUSFile.h  MinimapFile.h  NisAnim.h  NisEventSequence.h  SolidList.h  StreamBundle.h  TPKBlock.h  VaultDecoder.h  VaultFile.h  VideoFile.h  WorldData.h
include/patch/: BackupManager.h  BunRepacker.h  MwMod.h  SolidWriter.h
include/renderer/: GLCompat.h  MeshRenderer.h  OrbitCamera.h  ShaderProgram.h  TextureManager.h  TextureThumbnail.h  ThumbnailCache.h
include/ui/: AppShell.h  AudioPanel.h  CarBrowserPanel.h  CarEngineAudioPanel.h  CarMeshPanel.h  CarPanel.h  CarPerfPanel.h  CarPursuitPanel.h  CarTexturePanel.h  CarViewerPanel.h  CarVinylPanel.h  EffectPreview.h  EffectsPanel.h  EmitterEditor.h  FileDialog.h  FilterBox.h  MinimapPanel.h  MusicPanel.h  NisAnimPanel.h  NisPanel.h  ObjectExportPanel.h  RecentFiles.h  SoundBankPanel.h  StreamGraphPanel.h  TexturePackPanel.h  Toast.h  UIFontPanel.h  UIFrontendPanel.h  UIHudAtlasPanel.h  UIHudPanel.h  UISounds.h  VideoPanel.h
src/: main.cpp
src/android/: android_main.cpp  jni_bridge.cpp
src/async/: TaskQueue.cpp
src/core/: BINFile.cpp  ChunkReader.cpp  FlagReference.cpp  KnownNames.cpp  LZCDecompressor.cpp  Logger.cpp  ObjectClassifier.cpp  StringHash.cpp  VaultSchema.cpp
src/editor/: Exporter.cpp  GLTFExporter.cpp  MeshImporter.cpp
src/formats/: ABKFile.cpp  AnimationBank.cpp  AudioBank.cpp  AudioCodecs.cpp  CarInfo.cpp  CarSlot.cpp  EmitterCatalog.cpp  FontSheet.cpp  GINFile.cpp  HUDLayout.cpp  KnownNames.h  MPFFile.cpp  MUSFile.cpp  MinimapFile.cpp  NisAnim.cpp  NisEventSequence.cpp  SolidList.cpp  StreamBundle.cpp  TPKBlock.cpp  VaultDecoder.cpp  VaultFile.cpp  VideoFile.cpp  VideoFileStub.cpp  WorldData.cpp
src/patch/: BackupManager.cpp  BunRepacker.cpp  MwMod.cpp  SolidWriter.cpp
src/renderer/: MeshRenderer.cpp  OrbitCamera.cpp  ShaderProgram.cpp  TextureManager.cpp  TextureThumbnail.cpp  ThumbnailCache.cpp
src/ui/: AppShell.cpp  AudioPanel.cpp  CarBrowserPanel.cpp  CarEngineAudioPanel.cpp  CarMeshPanel.cpp  CarPanel.cpp  CarPerfPanel.cpp  CarPursuitPanel.cpp  CarTexturePanel.cpp  CarViewerPanel.cpp  CarVinylPanel.cpp  EffectPreview.cpp  EffectsPanel.cpp  EmitterEditor.cpp  FileDialog.cpp  MinimapPanel.cpp  MusicPanel.cpp  NisAnimPanel.cpp  NisPanel.cpp  ObjectExportPanel.cpp  RecentFiles.cpp  SoundBankPanel.cpp  StreamGraphPanel.cpp  TexturePackPanel.cpp  Toast.cpp  UIFontPanel.cpp  UIFrontendPanel.cpp  UIHudAtlasPanel.cpp  UIHudPanel.cpp  UISounds.cpp  VideoPanel.cpp
tests/: microtest.h  test_chunk.cpp  test_dds.cpp  test_dxt.cpp  test_hash.cpp  test_jdlz.cpp  test_main.cpp  test_mwmod.cpp  test_world.cpp
tools/: chunkpeek.py  chunkwalk.py  dumprange.py  mine_names.sh  mw_size_scan.py  mwcli.cpp  mwhashminer.c  vlt_cli.py  vlt_dict_resolve.py  vlt_viewer.py  vlt_viewer_gui.py
tools/vlt_dictionaries/: README.md  example_wordlist.txt  opennfstools_hashes.txt
triplets/: x64-windows-rel.cmake
